packages/forge-dsl/fixtures/errors/e14-tunnel-unpaired.fable
// expect: FORGE306
-> day

=== day ===
-> lesson ->
Lesson over.
-> END

=== lesson ===
No way back from this lesson.
-> END
